unpackaged/main/default/objects/LF__LeadReport__c/LF__LeadReport__c.object-meta.xml
<CustomObject>
    <label>LeadReport</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>