unpackaged/main/default/objects/LF__LeadReport__c/fields/LF__Account__c.field-meta.xml
<CustomField>
    <fullName>LF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Account Object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LeadReports</relationshipLabel>
    <relationshipName>LeadReports</relationshipName>
    <type>Lookup</type>
</CustomField>