unpackaged/main/default/objects/LF__LeadReport__c/fields/LF__BusinessID__c.field-meta.xml
<CustomField>
    <fullName>LF__BusinessID__c</fullName>
    <description>Business Id</description>
    <label>Business ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>