unpackaged/main/default/objects/LF__LeadReport__c/fields/LF__City__c.field-meta.xml
<CustomField>
    <fullName>LF__City__c</fullName>
    <description>City</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>