unpackaged/main/default/objects/LF__LeadReport__c/fields/LF__Country__c.field-meta.xml
<CustomField>
    <fullName>LF__Country__c</fullName>
    <description>Visit Country</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>