unpackaged/main/default/objects/LF__LeadReport__c/fields/LF__Lead__c.field-meta.xml
<CustomField>
    <fullName>LF__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Lead object</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LeadReports</relationshipLabel>
    <relationshipName>LeadReports</relationshipName>
    <type>Lookup</type>
</CustomField>